2014-12-19  David S. Miller  <davem@davemloft.net>

	* get-dynamic-info.h (elf_get_dynamic_info): Ignore -Warray-bounds for a
	link_map->l_info array access.

2014-12-19  Chris Metcalf  <cmetcalf@ezchip.com>

	* iconvdata/tst-loading.c (TIMEOUT): Increase timeout 10 sec.

	* math/atest-exp.c (TIMEOUT): Increase timeout to 10 sec.
	* math/atest-exp2.c (TIMEOUT): Likewise.
	* math/atest-sincos.c (TIMEOUT): Likewise.

2014-12-19  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/x86_64/x32/Makefile (CFLAGS-s_llround.c): Replace
	-Wno-error with -fno-builtin-lround.

2014-12-19  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/unix/sysv/linux/i386/lowlevellock-futex.h: New file.
	Contains futex constants and functions moved over from ...
	* sysdeps/unix/sysv/linux/i386/lowlevellock.h: ... here.  Include
	<lowlevellock-futex.h>.
	(lll_wait_tid): Use lll_futex_wait instead of assembly code.
	(lll_timedwait_tid): Add comments and parentheses around macro
	arguments.

2014-12-19  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Include
	<lowlevellock-futex.h>.  Remove FUTEX_* constants defined there.
	(__lll_private_flag): Remove.
	(lll_futex_wait): Likewise.
	(lll_futex_timed_wait): Likewise.
	(lll_futex_wake): Likewise.
	(lll_futex_requeue): Likewise.
	(lll_wait_tid): Use lll_futex_wait instead of assembly code.
	(__lll_timedwait_tid): Spell out argument names.
	(lll_timedwait_tid): Add comments and parentheses around macro
	arguments.
	* sysdeps/unix/sysv/linux/lowlevellock-futex.h: Make FUTEX_* constants,
	LLL_SHARED and LLL_PRIVATE usable from assembly code.

2014-12-19  Torvald Riegel  <triegel@redhat.com>

	* sysdeps/unix/sysv/linux/sh/libc-lowlevellock.S: Remove file.
	* sysdeps/unix/sysv/linux/sh/lowlevellock.S: Likewise.
	* sysdeps/unix/sysv/linux/sh/lowlevellock.h: Likewise.
	* sysdeps/unix/sysv/linux/sh/lowlevelrobustlock.S: Likewise.
	* sysdeps/unix/sysv/linux/sh/pthread_barrier_wait.S: Likewise.