@@ -24,20 +24,25 @@
 
 long double _Q_neg(const long double a)
 {
-  long double c = a;
+  union {
+    long double	ldbl;
+    UWtype	words[4];
+  } c;
+
+  c.ldbl = a;
 
 #if (__BYTE_ORDER == __BIG_ENDIAN)
-  ((UWtype *)&c)[0] ^= (((UWtype)1) << (W_TYPE_SIZE - 1));
+  c.words[0] ^= (((UWtype)1) << (W_TYPE_SIZE - 1));
 #elif (__BYTE_ORDER == __LITTLE_ENDIAN) && (W_TYPE_SIZE == 64)
-  ((UWtype *)&c)[1] ^= (((UWtype)1) << (W_TYPE_SIZE - 1));
+  c.words[1] ^= (((UWtype)1) << (W_TYPE_SIZE - 1));
 #elif (__BYTE_ORDER == __LITTLE_ENDIAN) && (W_TYPE_SIZE == 32)
-  ((UWtype *)&c)[3] ^= (((UWtype)1) << (W_TYPE_SIZE - 1));
+  c.words[3] ^= (((UWtype)1) << (W_TYPE_SIZE - 1));
 #else
   FP_DECL_Q(A); FP_DECL_Q(C);
 
   FP_UNPACK_RAW_Q(A, a);
   FP_NEG_Q(C, A);
-  FP_PACK_RAW_Q(c, C);
+  FP_PACK_RAW_Q(c.ldbl, C);
 #endif
-  return c;
+  return c.ldbl;
 }
